--- a/example/pages/components/navigation/menu/index.html
+++ b/example/pages/components/navigation/menu/index.html
@@ -30,6 +30,10 @@
         ${require('./code2.html')}
       </div>
       <ma-code>
+        <div class="right">
+          <a href="https://jsfiddle.net/youpinyao/n7n3bvop/"
+            target="_blank">jsfiddle</a>
+        </div>
         <code ng-bind="code3Text"></code>
       </ma-code>
     </div>
