tabs steps 文档优化

--- a/example/pages/components/navigation/steps/index.html
+++ b/example/pages/components/navigation/steps/index.html
@@ -5,29 +5,21 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="navigation-steps-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Steps 步骤条</h2>
     <p>引导用户按照流程完成任务的导航条。</p>
     <h3>代码演示</h3>
     <div class="p">
-      <ma-steps ma-index="{{stepIndex}}" ma-type="default">
-        <ma-step ma-click="setStepIndex(0)">步骤一<span>说明说明说明说明说明说明说明说明</span></ma-step>
-        <ma-step ma-click="setStepIndex(1)">步骤二<span>说明说明说明说明</span></ma-step>
-        <ma-step ma-click="setStepIndex(2)">步骤三<span>说明说明说明说明</span></ma-step>
-        <ma-step ma-click="setStepIndex(3)">步骤四</ma-step>
-      </ma-steps>
-      <code class="mt-20" ng-bind="stepType2Code"></code>
+      ${require('./code.html')}
+      <ma-code>
+        <div class="right">
+          <a href="https://jsfiddle.net/youpinyao/081Lnyxn/"
+            target="_blank">jsfiddle</a>
+        </div>
+        <code ng-bind="codeText"></code>
+      </ma-code>
     </div>
-    <div class="p">
-      <ma-steps ma-index="{{stepIndex}}" ma-type="mini">
-        <ma-step ma-click="setStepIndex(0)">步骤一</ma-step>
-        <ma-step ma-click="setStepIndex(1)">步骤二</ma-step>
-        <ma-step ma-click="setStepIndex(2)">步骤三</ma-step>
-        <ma-step ma-click="setStepIndex(3)">步骤四</ma-step>
-      </ma-steps>
-      <code class="mt-20" ng-bind="stepType1Code"></code>
-    </div>
-
     <h3>API</h3>
     <div class="p">
       <table>
@@ -53,4 +45,3 @@
     </div>
   </div>
 </div>
-
