--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -139,6 +139,7 @@ body.has-sider-menu > .main {
   overflow: auto;
   .sider-menu-title {
     font-size: $font18;
+    color: $base;
     padding: 20px 20px;
   }
   .sider-menu-content {
