--- a/example/pages/components/data-entry/checkbox/index.html
+++ b/example/pages/components/data-entry/checkbox/index.html
@@ -13,13 +13,13 @@
     </p>
     <h3>代码演示</h3>
     <div class="p">
-      <div class="mb-10">
-        <ma-button ma-type="primary" ma-click="checkboxDisabled = !checkboxDisabled">Toggle disabled {{!!checkboxDisabled}}</ma-button>
-      </div>
-
-      <ma-checkbox name="selectCheckbox" value="1" ng-model="selectCheckbox" ng-disabled="checkboxDisabled">选择1</ma-checkbox>
-      <ma-checkbox name="selectCheckbox" value="2" ng-model="selectCheckbox" ng-disabled="checkboxDisabled">选择2</ma-checkbox>
-      <ma-checkbox name="selectCheckbox" value="3" ng-model="selectCheckbox" ng-disabled="checkboxDisabled">选择3</ma-checkbox>
+      ${require('./code.html')}
+      <ma-code>
+        <div class="right">
+          <a href="https://jsfiddle.net/youpinyao/duej1zms/" target="_blank">jsfiddle</a>
+        </div>
+        <code ng-bind="codeText"></code>
+      </ma-code>
     </div>
     <h3>API</h3>
     <div class="p">
