--- a/example/pages/components/navigation/menu/index.html
+++ b/example/pages/components/navigation/menu/index.html
@@ -34,7 +34,10 @@
           <a href="https://jsfiddle.net/youpinyao/n7n3bvop/"
             target="_blank">jsfiddle</a>
         </div>
-        <code ng-bind="code3Text"></code>
+        <code>
+          <div ng-bind="code2Text"></div>
+          <div ng-bind="code3Text"></div>
+        </code>
       </ma-code>
     </div>
     <h3>API</h3>
