--- a/example/pages/components/data-entry/select/index.html
+++ b/example/pages/components/data-entry/select/index.html
@@ -5,102 +5,24 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="data-entry-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Select 选择器</h2>
     <p>
       类似 Select2 的选择器。
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix">
+      ${require('./code.html')}
       <div class="col-24">
-        <h4>disabled</h4>
-        <ma-switch
-          ng-model="disabled"
-        ></ma-switch>
+        <ma-code>
+          <div class="right">
+            <a href="https://jsfiddle.net/youpinyao/bkz11c7e/"
+              target="_blank">jsfiddle</a>
+          </div>
+          <code ng-bind="codeText"></code>
+        </ma-code>
       </div>
-      <div class="col-12">
-        <h4>static data</h4>
-        <div>
-          <ma-select
-            ng-model="selectValue"
-            ma-placeholder="select"
-
-            ma-value-key="value"
-            ma-text-key="text"
-            ma-data="data"
-
-            ng-disabled="disabled"
-
-            ma-search="true"
-            ma-clear="true"
-          >
-          </ma-select>
-        </div>
-      </div>
-      <div class="col-12">
-        <h4>dynamic data</h4>
-        <div>
-          <ma-select
-            ng-model="selectValue"
-            ma-placeholder="select dynamic"
-
-            ma-value-key="value"
-            ma-text-key="text"
-            ma-get-data="getData($searchKey)"
-
-            ng-disabled="disabled"
-
-            ma-search="true"
-          >
-          </ma-select>
-        </div>
-      </div>
-
-      <div class="col-12">
-        <h4>static data multiple</h4>
-        <div>
-          <ma-select
-            ng-model="selectValue"
-            ma-placeholder="select"
-
-            ma-value-key="value"
-            ma-text-key="text"
-            ma-data="data"
-
-            ng-disabled="disabled"
-
-            ma-search="true"
-            ma-clear="true"
-            ma-multiple="true"
-            ma-limit="10"
-          >
-          </ma-select>
-        </div>
-      </div>
-
-
-      <div class="col-12">
-        <h4>dynamic data multiple</h4>
-        <div>
-          <ma-select
-            ng-model="selectValue"
-            ma-placeholder="select"
-
-            ma-value-key="value"
-            ma-text-key="text"
-            ma-get-data="getData($searchKey)"
-
-            ng-disabled="disabled"
-
-            ma-search="true"
-            ma-clear="true"
-            ma-multiple="true"
-            ma-limit="10"
-          >
-          </ma-select>
-        </div>
-      </div>
-
     </div>
     <h3>API</h3>
     <div class="p">
