--- a/example/pages/components/data-entry/transfer/index.html
+++ b/example/pages/components/data-entry/transfer/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="col-24">
-        <h4>树形穿梭框</h4>
+        <h4>树形穿梭框（在数据量大的时候性能堪忧，请使用 <a href="#!/components/data-entry/transfer2">transfer2</a>）</h4>
         <ma-tree-transfer
           ng-model="selectTreeValue"
           ma-model="selectTreeParentValue"
