--- a/example/pages/components/data-entry/transfer2/index.html
+++ b/example/pages/components/data-entry/transfer2/index.html
@@ -8,7 +8,7 @@
   <div class="container" ma-full-container>
     <h2>Transfer2 穿梭框</h2>
     <p>
-      双栏穿梭选择框。
+      双栏穿梭选择框。内部使用jquery 实现性能相对ma-tree-transfer 好很多
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix">
