--- a/example/pages/components/data-entry/transfer/index.html
+++ b/example/pages/components/data-entry/transfer/index.html
@@ -5,54 +5,24 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="data-entry-transfer-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Transfer 穿梭框</h2>
     <p>
       双栏穿梭选择框。
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix">
-      <div class="col-24 mb-20">
-        <h4>disabled</h4>
-        <ma-switch
-          ng-model="disabled"
-        ></ma-switch>
-      </div>
-
-      <div class="col-24 mb-20">
-        <h4>普通穿梭框</h4>
-        <ma-transfer
-          ng-model="selectValue"
-
-          ma-data="data"
-          ma-value-key="value1"
-          ma-text-key="text1"
-
-          ma-left-title="所有"
-          ma-right-title="选中"
-
-          ng-disabled="disabled"
-        ></ma-transfer>
-      </div>
-
+      ${require('./code.html')}
       <div class="col-24">
-        <h4>树形穿梭框（在数据量大的时候性能堪忧，请使用 <a href="#!/components/data-entry/transfer2">transfer2</a>）</h4>
-        <ma-tree-transfer
-          ng-model="selectTreeValue"
-          ma-model="selectTreeParentValue"
-
-          ma-data="treeData"
-          ma-value-key="value1"
-          ma-text-key="text1"
-          ma-sub-key="sub1"
-
-          ma-left-title="所有"
-          ma-right-title="选中"
-
-          ng-disabled="disabled"
-        ></ma-tree-transfer>
+        <ma-code>
+          <div class="right">
+            <a href="https://jsfiddle.net/youpinyao/83z856rt/"
+              target="_blank">jsfiddle</a>
+          </div>
+          <code ng-bind="codeText"></code>
+        </ma-code>
       </div>
-
     </div>
     <h3>API</h3>
     <div class="p">
