--- a/example/pages/components/data-entry/datepicker/index.html
+++ b/example/pages/components/data-entry/datepicker/index.html
@@ -13,46 +13,14 @@
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix">
-      <div class="col-8 mb-20">
-        <h4>year</h4>
-        <ma-date-picker name="datepicker1"
-          ng-model="pickerDate"
-          ma-view="year"
-          ma-auto-close="true"
-          ma-min-view="year"
-          ma-format="YYYY">
-      </div>
-      <div class="col-8 mb-20">
-        <h4>month</h4>
-        <ma-date-picker name="datepicker2"
-          ng-model="pickerDate"
-          ma-view="month"
-          ma-min-view="month"
-          ma-format="YYYY-MM">
-      </div>
-      <div class="col-8 mb-20">
-        <h4>date</h4>
-        <ma-date-picker name="datepicker3"
-          ng-model="pickerDate"
-          ma-view="date"
-          ma-min-view="date"
-          ma-max-date="maxDate"
-          ma-format="YYYY-MM-DD">
-      </div>
-      <div class="col-8 mb-20">
-        <h4>minutes</h4>
-        <ma-date-picker name="datepicker4"
-          ng-model="pickerDate"
-          ma-view="minutes"
-          ma-min-view="minutes"
-          ma-format="YYYY-MM-DD HH:mm">
-      </div>
-      <div class="col-8 mb-20">
-        <h4>date range picker</h4>
-        <ma-date-range-picker name="datepicer5"
-          ng-model="rangePickerDate"
-          ma-max-date="maxDate"
-          ma-format="YYYY-MM-DD"></ma-date-range-picker>
+      ${require('./code.html')}
+      <div class="col-24">
+        <ma-code>
+          <div class="right">
+            <a href="https://jsfiddle.net/youpinyao/p966swgh/" target="_blank">jsfiddle</a>
+          </div>
+          <code ng-bind="codeText"></code>
+        </ma-code>
       </div>
     </div>
     <h3>API</h3>
