--- a/example/pages/components/data-display/tooltip/index.html
+++ b/example/pages/components/data-display/tooltip/index.html
@@ -14,68 +14,15 @@
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix pt-20">
-
-      <div class="col-12 center buttons">
-        <div class="col-24">
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="tl">TL</div>
-          </ma-button>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="tc">TC</div>
-          </ma-button>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="tr">TR</div>
-          </ma-button>
-        </div>
-        <div class="col-12">
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="lt">LT</div>
-          </ma-button>
-          <br/>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="lc">LC</div>
-          </ma-button>
-          <br/>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="lb">LB</div>
-          </ma-button>
-        </div>
-        <div class="col-12">
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="rt">RT</div>
-          </ma-button>
-          <br/>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="rc">RC</div>
-          </ma-button>
-          <br/>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="rb">RB</div>
-          </ma-button>
-        </div>
-        <div class="col-24">
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="bl">BL</div>
-          </ma-button>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="bc">BC</div>
-          </ma-button>
-          <ma-button>
-            <div ma-tooltip="{{tipText}}"
-              ma-direction="br">BR</div>
-          </ma-button>
-        </div>
+      ${require('./code.html')}
+      <div class="col-24">
+        <ma-code>
+          <div class="right">
+            <a href="https://jsfiddle.net/youpinyao/8h9e90e9/"
+              target="_blank">jsfiddle</a>
+          </div>
+          <code ng-bind="codeText"></code>
+        </ma-code>
       </div>
     </div>
 
