新增notification通知组件

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,6 +20,7 @@
 @import "transfer";
 @import "upload";
 @import "lightgallery";
+@import "notification";
 @import "message";
 @import "alert";
 @import "spin";
