--- a/example/pages/components/navigation/tabs/code.html
+++ b/example/pages/components/navigation/tabs/code.html
@@ -1,9 +1,9 @@
 <h4>类型一</h4>
 <div class="p">
-  <ma-tabs ng-model="selectTab">
-    <ma-tab ma-value="0">选项卡1</ma-tab>
-    <ma-tab ma-value="1">选项卡2</ma-tab>
-    <ma-tab ma-value="2">选项卡3</ma-tab>
+  <ma-tabs ng-model="selectTab2">
+    <ma-tab ma-value="large">选项卡1</ma-tab>
+    <ma-tab ma-value="default">选项卡2</ma-tab>
+    <ma-tab ma-value="small">选项卡3</ma-tab>
   </ma-tabs>
 </div>
 <h4>类型二</h4>
