--- a/example/pages/components/navigation/menu/code3.html
+++ b/example/pages/components/navigation/menu/code3.html
@@ -11,7 +11,8 @@
     </ul>
     <div>
       <!-- 二级菜单 -->
-      <!-- <div class="second-nav show">
+      <!-- <div class="second-nav show"
+        ma-second-menu>
         <ul class="clearfix">
           <li class="active">
             <a href="javascript:void(0)">Global 全局</a>
