侧边栏菜单独立实现

--- a/example/pages/components/navigation/menu/code3.html
+++ b/example/pages/components/navigation/menu/code3.html
@@ -10,8 +10,8 @@
       </li>
     </ul>
     <div>
-      <!-- 二级菜单 -->
-      <!-- <div class="second-nav show"
+      <!-- 二级菜单 会fixed在顶部header下面 -->
+      <div class="second-nav show"
         ma-second-menu>
         <ul class="clearfix">
           <li class="active">
@@ -21,7 +21,7 @@
             <a href="javascript:void(0)">Layout 布局</a>
           </li>
         </ul>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
