--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -49,12 +49,12 @@
     visibility: hidden;
     @include transform-origin();
     @include transform(scaleY(0));
-    @include transition();
-    position: absolute;
+    position: fixed;
+    margin-left: 0;
     z-index: 10;
     left: 0;
     right: 0;
-    margin-left: -220px;
+    /* margin-left: -220px;*/
     top: $headerHeight;
     background: $white;
     -webkit-box-shadow: inset 0 -1px 0 0 $shadow;
