分页组件bug修复，手动跳转功能后续再优化

--- a/example/pages/components/data-display/pagination/code.html
+++ b/example/pages/components/data-display/pagination/code.html
@@ -1,5 +1,5 @@
 <div class="mb-20">
-  <ma-pagination conf="paginationConf"></ma-pagination>
+  <ma-pagination ma-config="paginationConf"></ma-pagination>
 </div>
 
 
