--- a/example/pages/components/data-entry/checkbox/code.html
+++ b/example/pages/components/data-entry/checkbox/code.html
@@ -6,12 +6,15 @@
 <ma-checkbox name="selectCheckbox"
   value="1"
   ng-model="selectCheckbox"
+  ng-change="checkboxChange($model, $checked)"
   ng-disabled="checkboxDisabled">选择1</ma-checkbox>
 <ma-checkbox name="selectCheckbox"
   value="2"
   ng-model="selectCheckbox"
+  ng-change="checkboxChange($model, $checked)"
   ng-disabled="checkboxDisabled">选择2</ma-checkbox>
 <ma-checkbox name="selectCheckbox"
   value="3"
   ng-model="selectCheckbox"
+  ng-change="checkboxChange($model, $checked)"
   ng-disabled="checkboxDisabled">选择3</ma-checkbox>
