--- a/example/pages/components/data-entry/radio/code.html
+++ b/example/pages/components/data-entry/radio/code.html
@@ -5,12 +5,15 @@
 <ma-radio name="selectRadio"
   value="1"
   ng-model="selectRadio"
+  ng-change="radioChange($model)"
   ng-disabled="radioDisabled">选择1</ma-radio>
 <ma-radio name="selectRadio"
   value="2"
   ng-model="selectRadio"
+  ng-change="radioChange($model)"
   ng-disabled="radioDisabled">选择2</ma-radio>
 <ma-radio name="selectRadio"
   value="3"
   ng-model="selectRadio"
+  ng-change="radioChange($model)"
   ng-disabled="radioDisabled">选择3</ma-radio>
