--- a/example/pages/components/data-entry/radio/index.html
+++ b/example/pages/components/data-entry/radio/index.html
@@ -48,6 +48,12 @@
           <td>String</td>
           <td>-</td>
         </tr>
+        <tr>
+          <td>ng-change</td>
+          <td>非必填</td>
+          <td>Function</td>
+          <td>-</td>
+        </tr>
       </table>
     </div>
   </div>
