input inputNumber ng-change

--- a/example/pages/components/data-entry/input-number/code.html
+++ b/example/pages/components/data-entry/input-number/code.html
@@ -2,6 +2,7 @@
   <ma-input-number name="test"
     min="1"
     max="5"
+    ng-change="inputChange($model)"
     ng-model="numberTestValue1">
   </ma-input-number>
   min 0, max 5, ma-decimal 0
