--- a/example/pages/components/data-entry/input/code.html
+++ b/example/pages/components/data-entry/input/code.html
@@ -9,6 +9,7 @@
         type="text"
         ng-disabled="disabled"
         placeholder="{{placeholder}}"
+        ng-change="inputChange($model)"
         ng-model="testValue"></ma-input>
     </div>
   </div>
