--- a/example/pages/components/data-entry/input/index.html
+++ b/example/pages/components/data-entry/input/index.html
@@ -55,6 +55,12 @@
           <td>-</td>
         </tr>
         <tr>
+          <td>ng-change</td>
+          <td>非必填</td>
+          <td>Function</td>
+          <td>-</td>
+        </tr>
+        <tr>
           <td>ma-icon-click</td>
           <td>选填，在有右边搜索icon场景下使用</td>
           <td>Function</td>
