--- a/src/components/input/src/maInputTpl.html
+++ b/src/components/input/src/maInputTpl.html
@@ -11,6 +11,7 @@
     max="{{max}}"
     step="{{step}}"
     ng-readonly="readonly"
+    ng-change="change()"
     ng-disabled="disabled"
   />
 
@@ -24,6 +25,7 @@
     min="{{min}}"
     max="{{max}}"
     step="{{step}}"
+    ng-change="change()"
     ng-readonly="readonly"
     ng-disabled="disabled"
   ></textarea>
