switch ng-change

--- a/example/pages/components/data-entry/checkbox/index.html
+++ b/example/pages/components/data-entry/checkbox/index.html
@@ -52,7 +52,7 @@
         </tr>
         <tr>
           <td>ng-change</td>
-          <td>非必填</td>
+          <td>非必填, 参数：$model, $checked</td>
           <td>Function</td>
           <td>-</td>
         </tr>
