--- a/example/pages/components/data-entry/input/index.html
+++ b/example/pages/components/data-entry/input/index.html
@@ -57,7 +57,7 @@
         <tr>
           <td>ng-change</td>
           <td>非必填</td>
-          <td>Function</td>
+          <td>非必填, 参数：$model</td>
           <td>-</td>
         </tr>
         <tr>
