--- a/example/pages/components/data-entry/radio/index.html
+++ b/example/pages/components/data-entry/radio/index.html
@@ -50,7 +50,7 @@
         </tr>
         <tr>
           <td>ng-change</td>
-          <td>非必填</td>
+          <td>非必填, 参数：$model</td>
           <td>Function</td>
           <td>-</td>
         </tr>
